--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true?CharacterEncoding=UTF-8?useTimeZone=true&serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=Afmh@2912
+# Configuração padrão para desenvolvimento (H2)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
 spring.batch.initialize-schema=always 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.batch.jdbc.initialize-schema=always
+
+# Desabilitar execução automática de jobs
+spring.batch.job.enabled=false
+
+# Configuração para MySQL (comentada para desenvolvimento)
+# spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true&characterEncoding=UTF-8&useTimeZone=true&serverTimeZone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=Afmh@2912
 
