feat: Configuração MySQL para testes com container Docker
- Configurado MySQL container com porta 3306 exposta
- Atualizado application.properties para usar MySQL
- Testado conexão e execução dos jobs
- Verificado criação das tabelas do Spring Batch
- Projeto funcionando perfeitamente com Java 21 + Spring Boot 3.2.0 + MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-# Configuração padrão para desenvolvimento (H2)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
+# Configuração para MySQL (container local)
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true&characterEncoding=UTF-8&useTimeZone=true&serverTimeZone=UTC
+spring.datasource.username=root
+spring.datasource.password=2912
 spring.batch.initialize-schema=always 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -12,8 +10,10 @@ spring.batch.jdbc.initialize-schema=always
 # Desabilitar execução automática de jobs
 spring.batch.job.enabled=false
 
-# Configuração para MySQL (comentada para desenvolvimento)
-# spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true&characterEncoding=UTF-8&useTimeZone=true&serverTimeZone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=Afmh@2912
+# Configuração para H2 (comentada para usar MySQL)
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.h2.console.enabled=true
 
